Changes for 1.0alpha8:

 - fixed availability report
 - optimization of chart.html

 - added trend.html
 - added trends.html
 - improved performance of network map
 - added column icon to table sysmaps_hosts
 - added images Hub.png, Notebook.png, Printer.png, Router.png, Server.png, host.png
 - created table help
 - new monitored parameters: cksum[/usr/sbin/sshd], cksum[/usr/bin/ssh]
 - a color for each parameter of graph can be defined
 - warning in functions evaluate_DIFF has been eliminated
 - removed columns "Lastdelete" and "Nextcheck" from configuration of items
 - added patches to upgrades/dbpatches/1.0alpha7_to_1.0alpha8
 - label "Host" changed to "Parameter" in screen "Conf. of graph"
 - updated doc/dbstructure

Changes for 1.0alpha7:

 - added section about configuration of Apache
 - name of server included to descriptions of template triggers
 - link from list of triggers to trigger change form 
 - changed host form to ask about values from template
 - deleted link to comments.html in tr_status.html
 - fixed Enabled/Disabled checkbox in trigger form
 - added real links to page About
 - fullscreen mode for form Status of Triggers
 - minor changes in manual.txt
 - no password to see alarms needed
 - fullscreen mode for Network Maps and graphs
 - fixed bug with getting processor load on Linux
 - added /upgrades/dbpatches/1.0alpha6_to_1.0alpha7
 - changes in manual.txt
 - fixed bug with lost status of trigger
 - added file frontends/php/about.html
 - link can be deleted now (network maps)
 - host icons in network maps became clickable
 - function NODATA is no longer supported
 - fixed get_minnextcheck
 - all these tables are added to PostgreSQL
 - added table graphs_items
 - lowered default values for triggers
 - added file frontends/php/chart2.html
 - added file frontends/php/charts.html
 - added file frontends/php/graph.html

 - added file frontends/php/graphs.html
 - added file frontends/php/images/sysmaps/host.png
 - added file frontends/php/map.html