@@ -41,7 +41,7 @@
 	echo "<TR>";
 	echo "<TD WIDTH=\"10%\"><FONT SIZE=+1>Time</FONT></TD>";
 	echo "<TD WIDTH=\"5%\"><FONT SIZE=+1>Type</FONT></TD>";
-	echo "<TD><FONT SIZE=+1>Send to</FONT></TD>";
+	echo "<TD WIDTH=\"15%\"><FONT SIZE=+1>Send to</FONT></TD>";
 	echo "<TD><FONT SIZE=+1>Subject</FONT></TD>";
 	echo "<TD><FONT SIZE=+1>Message</FONT></TD>";
 	echo "</TR>";
