@@ -98,7 +98,7 @@
 	echo "</select>";
 
 	show_table2_v_delimiter();
-	echo "Add items supported by zabbix_agent";
+	echo "Add parameters supported by zabbix_agent";
 	show_table2_h_delimiter();
 	echo "<INPUT TYPE=\"CHECKBOX\" CHECKED ";
 	echo " NAME=\"template\"  VALUE=\"true\">";
